[gd_scene load_steps=8 format=3 uid="uid://bu3fhlbluudjq"]

[ext_resource type="Script" path="res://Chat/chat_manager.gd" id="1_jb2ap"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rdeo"]
bg_color = Color(0.00960619, 0.0115516, 0.0457024, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pprk4"]
bg_color = Color(0.101961, 0.113725, 0.243137, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1j6yy"]
bg_color = Color(0.184314, 0.203922, 0.4, 0.705882)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tkoxc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6t12k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4msdl"]

[node name="ChatHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_jb2ap")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 388.0
offset_right = -670.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0rdeo")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pprk4")

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
follow_focus = true

[node name="ChatLogRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/ScrollContainer"]
layout_mode = 2

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
z_index = 1
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1j6yy")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
text = " >  "

[node name="LineEdit" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_tkoxc")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_6t12k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_4msdl")
max_length = 60
caret_blink = true

[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
